css/styles.css
/* ... */
.offcanvas-collapse.open {
  visibility: visible;
  -webkit-transform: translateX(-100%);
  transform: translateX(-100%);
}

.navbar .navbar-nav {
  margin-top: 3.75rem;
  margin-bottom: 0.5rem;
}

.navbar .nav-item .nav-link {
  padding-top: 0.625rem;
  padding-bottom: 0.625rem;
  color: #ffffff;
  text-decoration: none;
  transition: all 0.2s ease;
}

.navbar .nav-item.dropdown.show .nav-link,
.navbar .nav-item .nav-link:hover,
.navbar .nav-item .nav-link.active {
  color: #c0f511;
}

/* Dropdown Menu */
.navbar .dropdown .dropdown-menu {
  animation: fadeDropdown 0.2s; /* required for the fade animation */
}

@keyframes fadeDropdown {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.navbar .dropdown-menu {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border: none;
  background-color: #0d0e0f;
}

.navbar .dropdown-item {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  color: #ffffff;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 0.875rem;
  text-decoration: none;
}

.navbar .dropdown-item:hover {
  background-color: #24262a;
  color: #9c9ead;
}

.navbar .dropdown-divider {
  width: 100%;
  height: 1px;
  margin: 0.5rem auto 0.5rem auto;
  border: none;
  background-color: #505050;
}
/* end of dropdown menu */

.navbar .fa-stack {
  width: 2em;
  margin-right: 0.25rem;
  font-size: 0.75rem;
}

.navbar .fa-stack-2x {
  color: #06112e;
  transition: all 0.2s ease;
}

.navbar .fa-stack-1x {
  color: #ffffff;
  transition: all 0.2s ease;
}

.navbar .fa-stack:hover .fa-stack-2x {
  color: #ffffff;
}

.navbar .fa-stack:hover .fa-stack-1x {
  color: #0b36a8;
}

.navbar .navbar-toggler {
  padding: 0;
  border: none;
  font-size: 1.25rem;
}

/******************/
/*     Header     */
/******************/
.header {
  background-color: rgba(12, 6, 24, 0.719);
  background-size: cover;
  text-align: center;
  overflow-x: hidden;
}
.header img {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  object-fit: cover;
  height: 100%;
  width: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
}

.header .h1-large {
  padding: 0;
  color: #ffffff;
  text-shadow: 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.664);
  user-select: none;
}

.header .btn-solid-lg:hover {
  color: #ffffff;
  background-color: #2259ec;
}
.header .btn-solid-lg {
  margin: 0.25rem;
}

.header .btn-outline-lg {
  padding: 1.625rem 1.625rem 1.625rem 1.625rem;
  border: none;
  color: #ffffff;
}

.header .btn-outline-lg:hover {
  background: transparent;
  color: #ecf00d;
  text-decoration: none;
}

.header .btn-outline-lg .fas {
  margin-right: 0.375rem;
}

.video-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

#video-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#main-video {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: transparent;
  background-position: center center;
  -moz-background-size: contain;
  background-size: contain;
  -o-object-fit: cover;
  object-fit: cover;
}

/*****************/
/*     About     */
/*****************/
.basic-1 {
  padding-top: 5.25rem;
  padding-bottom: 4.25rem;
  background-color: white;
}

.basic-1 .text-container {
  margin-bottom: 2rem;
}

.basic-1 h2 {
  margin-top: 1.5rem;
  color: #111929;
  margin-bottom: 1rem;
}

.basic-1 .time {
  margin-bottom: 0.5rem;
  color: #0b36a8;
  font-weight: 600;
  font-size: 0.875rem;
  line-height: 1.5rem;
  font-family: 'Poppins';
}

.basic-1 h6 {
  margin-bottom: 0.125rem;
}

/********************/
/*     Services     */
/********************/
.basic-2 {
  padding-top: 3.75rem;
  padding-bottom: 3.75rem;
  background-color: #111929;
}

.basic-2 .h2-heading {
  margin-bottom: 0.75rem;
  text-align: center;
}

.basic-2 .p-heading {
  margin-bottom: 3rem;
  text-align: center;
}

.basic-2 .text-box {
  margin-bottom: 3rem;
  padding: 3.5rem 1rem 2.125rem 1rem;
  border: 1px solid #cfd7de;
  box-shadow: 0.25rem 0.25rem 0.25rem #000;
  transition: all 0.2s;
}

.basic-2 .text-box:hover {
  transform: scale(1.06);
}

.basic-2 .fas,
.basic-2 .far {
  margin-bottom: 1.75rem;
  color: #0b36a8;
  font-size: 3.5rem;
}

.basic-2 h4 {
  letter-spacing: 1px;
}

/*******************/
/*     Details     */
/*******************/
.split .area-1 {
  height: 430px;
  background: linear-gradient(
      to bottom right,
      rgba(25, 26, 29, 0.5),
      rgb(26, 2, 160)
    ),
    url('../images/details-background.jpg') center center no-repeat;
  background-size: cover;
}

.split .area-2 {
  padding-top: 1.75rem;
  padding-bottom: 7.75rem;
  background-color: #111929;
}

.split p {
  margin-bottom: 2.25rem;
}

.split .icons-container {
  margin-top: 3rem;
}

.split .icons-container img {
  width: 40px;
  margin-right: 0.625rem;
  margin-bottom: 0.75rem;
}

.split .text-container {
  background-color: white;
}

/********************/
/*     Projects     */
/********************/
.parallax {
  background-image: linear-gradient(rgba(25, 28, 41, 0.589), rgb(2, 2, 3)),
    url('../images/details-background.jpg');
  min-height: 100px;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
}

@media only screen and (max-device-width: 1366px) {
  .parallax {
    background-attachment: scroll;
  }
}

#portfolio h2 {
  color: white;
  text-shadow: 0.25rem 0.25rem 0.25rem #000000;
}
.basic-3 {
  padding-top: 4.25rem;
  padding-bottom: 5rem;
}

.basic-3 .p-heading {
  margin-bottom: 5rem;
  text-align: center;
  color: black;
}

.basic-3 .text-container {
  margin-bottom: 0rem;
}

.basic-3 .image-container {
  margin-bottom: 2rem;
  margin-top: 3rem;
}
/* ... */

